--- a/templates/agents/agents_list.html
+++ b/templates/agents/agents_list.html
@@ -181,7 +181,7 @@
                 <a href="{% url 'contact' %}" class="bg-yellow-600 hover:bg-yellow-700 text-white font-bold py-3 px-8 rounded-lg transition">
                     Contact Our Team
                 </a>
-                <a href="{% url 'property_list' %}" class="bg-transparent border-2 border-white hover:bg-white hover:text-blue-900 text-white font-bold py-3 px-8 rounded-lg transition">
+                <a href="{% url 'properties:property_list' %}" class="bg-transparent border-2 border-white hover:bg-white hover:text-blue-900 text-white font-bold py-3 px-8 rounded-lg transition">
                     Browse Properties
                 </a>
             </div>
