--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -14,10 +14,10 @@
         <!-- Navigation -->
         <nav class="hidden md:flex space-x-8">
             <a href="{% url 'home' %}" class="text-gray-600 font-medium hover:text-yellow-600 transition">Home</a>
-            <a href="{% url 'property_list' %}" class="text-gray-600 font-medium hover:text-yellow-600 transition">Properties</a>
+             <a href="{% url 'properties:property_list' %}" class="text-gray-600 font-medium hover:text-yellow-600 transition">Properties</a>
             <a href="{% url 'agents:agents_list' %}" class="text-gray-600 font-medium hover:text-yellow-600 transition">Our Agents</a>
             <a href="{% url 'about' %}" class="text-gray-600 font-medium hover:text-yellow-600 transition">About</a>
-            <a href="{% url 'blog_list' %}" class="text-gray-600 font-medium hover:text-yellow-600 transition">Blog</a>
+            <a href="{% url 'blog:blog_list' %}" class="text-gray-600 font-medium hover:text-yellow-600 transition">Blog</a>
             <a href="{% url 'contact' %}" class="text-gray-600 font-medium hover:text-yellow-600 transition">Contact</a>
             {% if user.is_authenticated %}
                 <a href="{% url 'profile' %}" class="text-blue-900 font-medium hover:text-yellow-600 transition">My Profile</a>
@@ -66,10 +66,10 @@
     <!-- Mobile Menu -->
     <div id="mobile-menu" class="hidden md:hidden bg-white py-4 px-4 shadow-lg">
         <a href="{% url 'home' %}" class="block py-2 text-gray-600 font-medium">Home</a>
-        <a href="{% url 'property_list' %}" class="block py-2 text-gray-600 font-medium">Properties</a>
+         <a href="{% url 'properties:property_list' %}" class="text-gray-600 font-medium hover:text-yellow-600 transition">Properties</a>
         <a href="{% url 'agents:agents_list' %}" class="block py-2 text-gray-600 font-medium">Our Agents</a>
         <a href="{% url 'about' %}" class="block py-2 text-gray-600 font-medium">About</a>
-        <a href="{% url 'blog_list' %}" class="block py-2 text-gray-600 font-medium">Blog</a>
+        <a href="{% url 'blog:blog_list' %}" class="block py-2 text-gray-600 font-medium">Blog</a>
         <a href="{% url 'contact' %}" class="block py-2 text-gray-600 font-medium">Contact</a>
         {% if user.is_authenticated %}
             <a href="{% url 'profile' %}" class="block py-2 text-blue-900 font-medium">My Profile</a>
